--- a/style.scss
+++ b/style.scss
@@ -15,8 +15,9 @@ sans-serif;
 .form-section__wrapper {
   width: 1114px;
   height: 1289px;
-  background: url(/assets/img/form__bcg.png) no-repeat center;
-  // background-position: bottom bottom;
+  background: url(../img/form__bcg.png) no-repeat center;
+
+// background-position: bottom bottom;
   background-size: cover;
 }
 
